--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -371,9 +371,12 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="U1k-Te-ADj"/>
                                 </constraints>
-                                <state key="normal" title="FINISH">
+                                <state key="normal" title="ADD LOCATION">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="addLocation:" destination="ZUx-9v-S4r" eventType="touchUpInside" id="yaI-ry-USX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vEs-F4-U1z"/>
